check imagenes css

--- a/styles/_enRegi.scss
+++ b/styles/_enRegi.scss
@@ -105,31 +105,31 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 */
 
 #inputApellido {
-  background: url("/images/id-card-regular.svg") no-repeat right;
+  background: url("images/id-card-regular.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
 
 #inputNombre {
-  background: url("/images/id-card-regular.svg") no-repeat right;
+  background: url("images/id-card-regular.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
 
 #inputDate {
-  background: url("/images/calendar-days-regular.svg") no-repeat right;
+  background: url("images/calendar-days-regular.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
 
 #inputDNI {
-  background: url("/images/id-card-regular.svg") no-repeat right;
+  background: url("images/id-card-regular.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
 
 #inputPhone {
-  background: url("/images/phone-solid.svg") no-repeat right;
+  background: url("images/phone-solid.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
