--- a/styles/style.css
+++ b/styles/style.css
@@ -64,13 +64,13 @@
   }
 }
 #inputEmail {
-  background: url("/images/at-solid.svg") no-repeat right;
+  background: url("images/at-solid.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
 
 #inputPass {
-  background: url("/images/key-solid.svg") no-repeat right;
+  background: url("images/key-solid.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
@@ -488,31 +488,31 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 */
 #inputApellido {
-  background: url("/images/id-card-regular.svg") no-repeat right;
+  background: url("images/id-card-regular.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
 
 #inputNombre {
-  background: url("/images/id-card-regular.svg") no-repeat right;
+  background: url("images/id-card-regular.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
 
 #inputDate {
-  background: url("/images/calendar-days-regular.svg") no-repeat right;
+  background: url("images/calendar-days-regular.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
 
 #inputDNI {
-  background: url("/images/id-card-regular.svg") no-repeat right;
+  background: url("images/id-card-regular.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
 
 #inputPhone {
-  background: url("/images/phone-solid.svg") no-repeat right;
+  background: url("images/phone-solid.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
