--- a/styles/_enIndex.scss
+++ b/styles/_enIndex.scss
@@ -68,7 +68,7 @@
 }
 
 #inputEmail {
-  background: url("images/at-solid.svg") no-repeat right;
+  background: url("./images/at-solid.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
