--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,7 @@
   }
 }
 #inputEmail {
-  background: url("images/at-solid.svg") no-repeat right;
+  background: url("./images/at-solid.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
