now should work

--- a/styles/_enIndex.scss
+++ b/styles/_enIndex.scss
@@ -68,13 +68,13 @@
 }
 
 #inputEmail {
-  background: url("./images/at-solid.svg") no-repeat right;
+  background: url("../images/at-solid.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
 
 #inputPass {
-  background: url("images/key-solid.svg") no-repeat right;
+  background: url("../images/key-solid.svg") no-repeat right;
   background-position: 96% 50%;
   background-size: 20px;
 }
