--- a/styles/_enLogged.scss
+++ b/styles/_enLogged.scss
@@ -146,9 +146,22 @@ body {
     .realContent {
         border-radius: 0px;
         height: calc(100vh - 100px);
-        width: calc(100vw);
+        width: 100vw;
     }
 }
+
+@media (min-width: 1024px) and (max-width: 1367px) {
+    .realContent {
+        height: 100vh;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 820px) {
+    .realContent {
+        height: 100vh;
+    }
+}
+
 
 .indicadorPagina {
     font-family: 'Montserrat', sans-serif;
@@ -169,12 +182,45 @@ body {
 .arpaStats {
     margin-left: 50px;
     display: flex;
+    flex-wrap: wrap;
+    width: calc(100vw - 100px);
 }
+
 
 .statsText {
     font-family: 'Montserrat', sans-serif;
     font-size: 32px;
     width: 500px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+
+@media (max-width: 375px) {
+    .statsText {
+        font-size: 20px;
+    }
+}
+
+@media (min-width: 376px) and (max-width: 420px) {
+    .statsText {
+        font-size: 24px;
+    }
+}
+ 
+@media (min-width: 421px) and (max-width: 1023px) {
+    .statsText {
+        font-size: 42px;
+        width: 600px;
+
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1367px) {
+    .statsText {
+        font-size: 24px;
+        width: 330px;
+
+    }
 }
 
 .statsNumbers {
