--- a/styles/_selectores.scss
+++ b/styles/_selectores.scss
@@ -1,97 +1,74 @@
-select {
-    // A reset of styles, including removing the default dropdown arrow
-    appearance: none;
-    background-color: transparent;
-    border: none;
-    padding: 0 1em 0 0;
-    margin: 0;
-    width: 100%;
-    font-family: inherit;
-    font-size: inherit;
-    cursor: inherit;
-    line-height: inherit;
-  
-    // Stack above custom arrow
-    z-index: 1;
-  
-    // Remove dropdown arrow in IE10 & IE11
-    // @link https://www.filamentgroup.com/lab/select-css.html
-    &::-ms-expand {
-      display: none;
-    }
-  
-    // Remove focus outline, will add on alternate element
-    outline: none;
-  }
-  
-  .select {
-    display: grid;
-    grid-template-areas: "select";
-    align-items: center;
-    position: relative;
-  
-    select,
-    &::after {
-      grid-area: select;
-    }
-  
-    min-width: 15ch;
-    max-width: 30ch;
-  
-    border: 1px solid var(--select-border);
-    border-radius: 0.25em;
-    padding: 0.25em 0.5em;
-  
-    font-size: 1.25rem;
-    cursor: pointer;
-    line-height: 1.1;
-     /*
-    // Optional styles
-    // remove for transparency
-    background-color: #fff;
-    background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
-  
- 
-    // Custom arrow
-    &:not(.select--multiple)::after {
-      content: "";
-      justify-self: end;
-      width: 0.8em;
-      height: 0.5em;
-      background-color: var(--select-arrow);
-      clip-path: polygon(100% 0%, 0 0%, 50% 100%);
-    }
-    */
+$width: 200px;
+$height: 40px;
 
+/* [  ] */
+
+
+.rh-dropdown {
+  > .dropdown {
+    vertical-align: middle;
   }
-  
-  // Interim solution until :focus-within has better support
-  select:focus + .focus {
+
+  .dropdown {
+    display: inline-block;
+    overflow: hidden;
+    width: $width;
+    height: $height;
+    background: #f5f5f5;
+    margin-top: 0px;
+    border: 0;
+
+  & + .dropdown { border-left: 1px dashed #ddd; }
+
+  &:before {
+    content: '';
     position: absolute;
-    top: -1px;
-    left: -1px;
-    right: -1px;
-    bottom: -1px;
-    border: 2px solid var(--select-focus);
-    border-radius: inherit;
+    top: 50%;
+    right: 10px;
+    width: 0;
+    height: 0;
+    pointer-events: none;
   }
-  
-  select[multiple] {
-    padding-right: 0;
-  
-    /*
-     * Safari will not reveal an option
-     * unless the select height has room to 
-     * show all of it
-     * Firefox and Chrome allow showing 
-     * a partial option
-     */
-    height: 6rem;
-  
-    option {
-      white-space: normal;
-  
-      // Only affects Chrome
-      outline-color: var(--select-focus);
+
+  &:before {
+    border-top-style: solid;
+    border-bottom: none;
+    margin-top: -2px;
+  }
+
+
+  .dropdown-select {
+    position: relative;
+    width: 100%;
+    margin: 0;
+    padding: 6px 8px 6px 10px;
+    height: $height;
+    font-size: 13px;
+    border: 0;
+    -webkit-appearance: none;
+
+    @-moz-document url-prefix() {
+        padding-left: 6px;
     }
+
+    & > option {
+    margin: 3px;
+    padding: 6px 8px;
+    text-shadow: none;
+    cursor: pointer;
+  }
+  }
+  } //end dropdown
+}
+
+.ie9 {  
+  .dropdown { z-index: 1; }
+  .dropdown-select { z-index: -1; }
+  .dropdown-select:focus { z-index: 3; }
+}
+
+/* [ std-select ] */
+.std-select {
+  width: $width;
+  height: $height;
 }
