--- a/styles/style.css
+++ b/styles/style.css
@@ -252,11 +252,13 @@ body {
     width: 100vw;
   }
 }
+/*
 @media (min-width: 1024px) and (max-width: 1367px) {
-  .realContent {
-    height: 100vh;
-  }
+    .realContent {
+        height: 100vh;
+    }
 }
+*/
 @media (min-width: 768px) and (max-width: 820px) {
   .realContent {
     height: 100vh;
@@ -280,7 +282,6 @@ body {
   margin-left: 50px;
   display: flex;
   flex-wrap: wrap;
-  width: calc(100vw - 100px);
 }
 
 .statsText {
@@ -601,14 +602,14 @@ table {
 
 table tr {
   background-color: #FFFFFF;
-  border: 1px solid #ddd;
+  border: 1px solid var(--color4);
 }
 
 table th,
 table td {
   padding: 10px;
   text-align: center;
-  border: 1px solid #ccc;
+  border: 1px solid var(--color4);
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -623,7 +624,7 @@ table th {
   font-size: 18px;
   font-weight: 700;
   text-transform: uppercase;
-  background-color: #4762e6;
+  background-color: var(--color3);
   color: #FFFFFF;
 }
 
@@ -644,13 +645,13 @@ table th {
   }
 
   table tr {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid var(--color4);
     display: block;
     margin-bottom: 15px;
   }
 
   table td {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid var(--color4);
     display: block;
     font-size: 16px;
     text-align: right;
@@ -664,7 +665,7 @@ table th {
   }
 
   table td:first-child {
-    background-color: #4762e6;
+    background-color: var(--color3);
     color: #FFFFFF;
   }
 
@@ -673,99 +674,98 @@ table th {
   }
 }
 body:not(.nohover) tbody tr:hover {
-  border: 2px solid #4762e6;
-  background-color: #dae0fc;
+  border: 2px solid var(--color3);
+  background-color: var(--color1);
 }
 
 .contenedorTabla {
-  margin-left: 25px;
-  margin-right: 25px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
+@media (max-width: 420px) {
+  .contenedorTabla {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+}
 .contenedorFiltros {
   margin: 25px;
   margin-left: 50px;
 }
 
-select {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background-color: transparent;
-  border: none;
-  padding: 0 1em 0 0;
-  margin: 0;
-  width: 100%;
-  font-family: inherit;
-  font-size: inherit;
-  cursor: inherit;
-  line-height: inherit;
-  z-index: 1;
-  outline: none;
-}
-select::-ms-expand {
-  display: none;
-}
-
-.select {
-  display: grid;
-  grid-template-areas: "select";
-  align-items: center;
-  position: relative;
-  min-width: 15ch;
-  max-width: 30ch;
-  border: 1px solid var(--select-border);
-  border-radius: 0.25em;
-  padding: 0.25em 0.5em;
-  font-size: 1.25rem;
-  cursor: pointer;
-  line-height: 1.1;
-  /*
-  // Optional styles
-  // remove for transparency
-  background-color: #fff;
-  background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
-
-
-  // Custom arrow
-  &:not(.select--multiple)::after {
-    content: "";
-    justify-self: end;
-    width: 0.8em;
-    height: 0.5em;
-    background-color: var(--select-arrow);
-    clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+@media (max-width: 420px) {
+  .contenedorFiltros {
+    margin-left: 25px;
+    margin-right: 25px;
   }
-  */
 }
-.select select, .select::after {
-  grid-area: select;
+/* [  ] */
+.rh-dropdown > .dropdown {
+  vertical-align: middle;
 }
-
-select:focus + .focus {
+.rh-dropdown .dropdown {
+  display: inline-block;
+  overflow: hidden;
+  width: 200px;
+  height: 40px;
+  background: #f5f5f5;
+  margin-top: 0px;
+  border: 0;
+}
+.rh-dropdown .dropdown + .dropdown {
+  border-left: 1px dashed #ddd;
+}
+.rh-dropdown .dropdown:before {
+  content: "";
   position: absolute;
-  top: -1px;
-  left: -1px;
-  right: -1px;
-  bottom: -1px;
-  border: 2px solid var(--select-focus);
-  border-radius: inherit;
+  top: 50%;
+  right: 10px;
+  width: 0;
+  height: 0;
+  pointer-events: none;
+}
+.rh-dropdown .dropdown:before {
+  border-top-style: solid;
+  border-bottom: none;
+  margin-top: -2px;
+}
+.rh-dropdown .dropdown .dropdown-select {
+  position: relative;
+  width: 100%;
+  margin: 0;
+  padding: 6px 8px 6px 10px;
+  height: 40px;
+  font-size: 13px;
+  border: 0;
+  -webkit-appearance: none;
+}
+@-moz-document url-prefix() {
+  .rh-dropdown .dropdown .dropdown-select {
+    padding-left: 6px;
+  }
+}
+.rh-dropdown .dropdown .dropdown-select > option {
+  margin: 3px;
+  padding: 6px 8px;
+  text-shadow: none;
+  cursor: pointer;
 }
 
-select[multiple] {
-  padding-right: 0;
-  /*
-   * Safari will not reveal an option
-   * unless the select height has room to 
-   * show all of it
-   * Firefox and Chrome allow showing 
-   * a partial option
-   */
-  height: 6rem;
+.ie9 .dropdown {
+  z-index: 1;
 }
-select[multiple] option {
-  white-space: normal;
-  outline-color: var(--select-focus);
+.ie9 .dropdown-select {
+  z-index: -1;
+}
+.ie9 .dropdown-select:focus {
+  z-index: 3;
+}
+
+/* [ std-select ] */
+.std-select {
+  width: 200px;
+  height: 40px;
 }
 
 #toastOK {
@@ -851,11 +851,13 @@ select[multiple] option {
   }
 }
 html {
-  background: var(--bgWeb);
-  --bgWeb: #4762e6;
+  background: var(--color3);
+  --colorW: #FFFFFF;
+  --colorB: #000000;
   --color1: #c2caef;
   --color2: #4dbcf4;
   --color3: #4762e6;
+  --color4: #d4d4d4;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -865,8 +867,7 @@ html {
 }
 
 html[data-theme=sol] {
-  background: var(--bgWeb);
-  --bgWeb: #FFFFFF;
+  background: var(--colorW);
 }
 
 @media (max-width: 420px) {
