--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,17 +2,19 @@
 @use "enLogged";
 @use "barra";
 @use "enRegi";
-@use "enRefu";
+@use "tablas";
 @use "selectores";
 @use "toasts";
 
 html {
-  background: var(--bgWeb);
-  --bgWeb: #4762e6;
+  background: var(--color3);
 
+  --colorW: #FFFFFF;
+  --colorB: #000000;
   --color1: #c2caef;
   --color2: #4dbcf4;
   --color3: #4762e6;
+  --color4: #d4d4d4;
 
   display: flex;
   align-items: center;
@@ -25,10 +27,7 @@ html {
 }
 
 html[data-theme="sol"] {
-  background: var(--bgWeb);
-
-  --bgWeb: #FFFFFF;
-
+  background: var(--colorW);
 
 }
 
