--- a/styles/_enIndex.scss
+++ b/styles/_enIndex.scss
@@ -7,7 +7,7 @@
   align-items: center;
   border-radius: 50px;
   overflow: hidden;
-  background-color: #FFFFFF;
+  background-color: var(--colorW);
 }
 
 @media (max-width: 420px) {
@@ -25,7 +25,7 @@
 }
 
 .contenedorTitulo {
-  background-color: #4762e6;
+  background-color: var(--color3);
   width: 500px;
   height: 100px;
   display: flex;
@@ -44,7 +44,7 @@
 
   input:focus {
     outline: none;
-    border: 1px solid #4762e6;
+    border: 1px solid var(--color3);
     transition: border 1s ease-in-out;
   }
 }
@@ -53,7 +53,7 @@
   font-family: 'Oswald', sans-serif;
   font-size: 48px;
   margin: 0;
-  color: #FFFFFF;
+  color: var(--colorW);
 }
 
 .subtLog {
@@ -109,7 +109,7 @@
 }
 
 .butLog:hover {
-  background-color: #4762e6;
-  color: #FFFFFF;
+  background-color: var(--color3);
+  color: var(--colorW);
   cursor: pointer;
 }
