--- a/styles/_enLogged.scss
+++ b/styles/_enLogged.scss
@@ -4,7 +4,7 @@ body {
 }
 
 .main {
-    color: #FFFFFF;
+    color: var(--colorW);
 }
 
 .browse {
@@ -17,8 +17,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #4762e6;
-    color: #FFFFFF;
+    background-color: var(--color3);
+    color: var(--colorW);
 
     a:first-child {
         margin-top: 100px;
@@ -33,39 +33,19 @@ body {
 
 .content {
     width: 100vw;
-    background-color: #4762e6;
+    background-color: var(--color3);
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    color: #000000;
+    color: var(--colorB);
 }
-
-/*
-@media (max-width: 420px) {
-    .content {
-        width: 100vw;
-    }
-}
-
-@media (min-width: 421px) and (max-width: 1025px) {
-    .content {
-        width: calc(100vw - 17px);
-    }
-}
-
-@media (min-width: 1921px) {
-    .content {
-        width: 100vw;
-    }
-}
-*/
 
 .userBar {
     height: 100px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    background-color: #4762e6;
+    background-color: var(--color3);
 }
 
 
@@ -73,7 +53,7 @@ body {
     margin-right: 20px;
     font-family: 'Oswald', sans-serif;
     font-size: 24px;
-    color: #FFFFFF;
+    color: var(--colorW);
 }
 
 .userPic {
@@ -81,7 +61,7 @@ body {
     height: 75px;
     border-radius: 50%;
     margin-right: 50px;
-    background-color: #FFFFFF;
+    background-color: var(--colorW);
 }
 
 @media (max-width: 420px) {
@@ -99,16 +79,16 @@ body {
     min-height: 75px;
     border-radius: 12px;
     font-size: 24px;
-    color: #FFFFFF;
+    color: var(--colorW);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #FFFFFF;
+    color: var(--colorW);
     transition: background-color 1s ease-in-out;
 
     a {
-        color: #FFFFFF;
+        color: var(--colorW);
     }
 }
 
@@ -136,7 +116,7 @@ body {
 }
 
 .realContent {
-    background-color: #FFFFFF;
+    background-color: var(--colorW);
     border-radius: 50px 0 0 0;
     min-height: calc(100vh - 100px);
     width: calc(100vw - 100px);
@@ -149,13 +129,7 @@ body {
         width: 100vw;
     }
 }
-/*
-@media (min-width: 1024px) and (max-width: 1367px) {
-    .realContent {
-        height: 100vh;
-    }
-}
-*/
+
 @media (min-width: 768px) and (max-width: 820px) {
     .realContent {
         height: 100vh;
@@ -169,7 +143,6 @@ body {
     margin: 25px;
     margin-left: 50px;
     font-weight: 700;
-
 }
 
 @media (max-width: 420px) {
@@ -205,12 +178,11 @@ body {
         font-size: 24px;
     }
 }
- 
+
 @media (min-width: 421px) and (max-width: 1023px) {
     .statsText {
         font-size: 42px;
         width: 600px;
-
     }
 }
 
@@ -218,7 +190,6 @@ body {
     .statsText {
         font-size: 24px;
         width: 330px;
-
     }
 }
 
