--- a/styles/_enRegi.scss
+++ b/styles/_enRegi.scss
@@ -7,7 +7,7 @@
   align-items: center;
   border-radius: 50px;
   overflow: hidden;
-  background-color: #FFFFFF;
+  background-color: var(--colorW);
 }
 
 @media (max-width: 420px) {
@@ -28,7 +28,7 @@
 }
 
 .contenedorTitulo2 {
-  background-color: #4762e6;
+  background-color: var(--color3);
   width: 800px;
   height: 100px;
   display: flex;
@@ -49,7 +49,7 @@
 
   input:focus {
     outline: none;
-    border: 1px solid #4762e6;
+    border: 1px solid var(--color3);
     transition: border 1s ease-in-out;
   }
 }
@@ -71,7 +71,7 @@
 
   input:focus {
     outline: none;
-    border: 1px solid #4762e6;
+    border: 1px solid var(--color3);
     transition: border 1s ease-in-out;
   }
 }
@@ -146,9 +146,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #FFFFFF;
+  color: var(--colorW);
   border: 1px solid #4ebbf2;
-  background-color: #4762e6;
+  background-color: var(--color3);
   transition: background-color 1s ease-in-out,
     color 1s ease-in-out;
 }
@@ -161,7 +161,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .butLogINV:hover {
-  background-color: #FFFFFF;
+  background-color: var(--colorW);
   color: #000000;
   cursor: pointer;
 }
