--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
   align-items: center;
   border-radius: 50px;
   overflow: hidden;
-  background-color: #FFFFFF;
+  background-color: var(--colorW);
 }
 
 @media (max-width: 420px) {
@@ -23,7 +23,7 @@
   }
 }
 .contenedorTitulo {
-  background-color: #4762e6;
+  background-color: var(--color3);
   width: 500px;
   height: 100px;
   display: flex;
@@ -42,7 +42,7 @@
 }
 .contenedorInputs input:focus {
   outline: none;
-  border: 1px solid #4762e6;
+  border: 1px solid var(--color3);
   transition: border 1s ease-in-out;
 }
 
@@ -50,7 +50,7 @@
   font-family: "Oswald", sans-serif;
   font-size: 48px;
   margin: 0;
-  color: #FFFFFF;
+  color: var(--colorW);
 }
 
 .subtLog {
@@ -104,8 +104,8 @@
 }
 
 .butLog:hover {
-  background-color: #4762e6;
-  color: #FFFFFF;
+  background-color: var(--color3);
+  color: var(--colorW);
   cursor: pointer;
 }
 
@@ -115,7 +115,7 @@ body {
 }
 
 .main {
-  color: #FFFFFF;
+  color: var(--colorW);
 }
 
 .browse {
@@ -127,8 +127,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #4762e6;
-  color: #FFFFFF;
+  background-color: var(--color3);
+  color: var(--colorW);
 }
 .browse a:first-child {
   margin-top: 100px;
@@ -141,45 +141,26 @@ body {
 }
 .content {
   width: 100vw;
-  background-color: #4762e6;
+  background-color: var(--color3);
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  color: #000000;
+  color: var(--colorB);
 }
 
-/*
-@media (max-width: 420px) {
-    .content {
-        width: 100vw;
-    }
-}
-
-@media (min-width: 421px) and (max-width: 1025px) {
-    .content {
-        width: calc(100vw - 17px);
-    }
-}
-
-@media (min-width: 1921px) {
-    .content {
-        width: 100vw;
-    }
-}
-*/
 .userBar {
   height: 100px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background-color: #4762e6;
+  background-color: var(--color3);
 }
 
 .userName {
   margin-right: 20px;
   font-family: "Oswald", sans-serif;
   font-size: 24px;
-  color: #FFFFFF;
+  color: var(--colorW);
 }
 
 .userPic {
@@ -187,7 +168,7 @@ body {
   height: 75px;
   border-radius: 50%;
   margin-right: 50px;
-  background-color: #FFFFFF;
+  background-color: var(--colorW);
 }
 
 @media (max-width: 420px) {
@@ -204,16 +185,16 @@ body {
   min-height: 75px;
   border-radius: 12px;
   font-size: 24px;
-  color: #FFFFFF;
+  color: var(--colorW);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #FFFFFF;
+  color: var(--colorW);
   transition: background-color 1s ease-in-out;
 }
 .menuItem a {
-  color: #FFFFFF;
+  color: var(--colorW);
 }
 
 .itemOnMobile {
@@ -239,7 +220,7 @@ body {
   }
 }
 .realContent {
-  background-color: #FFFFFF;
+  background-color: var(--colorW);
   border-radius: 50px 0 0 0;
   min-height: calc(100vh - 100px);
   width: calc(100vw - 100px);
@@ -252,13 +233,6 @@ body {
     width: 100vw;
   }
 }
-/*
-@media (min-width: 1024px) and (max-width: 1367px) {
-    .realContent {
-        height: 100vh;
-    }
-}
-*/
 @media (min-width: 768px) and (max-width: 820px) {
   .realContent {
     height: 100vh;
@@ -344,23 +318,23 @@ body {
   position: absolute;
   width: 30px;
   height: 2px;
-  background: #FFFFFF;
+  background: var(--colorW);
   transition: 0.2s;
   transform: translateY(-10px);
-  box-shadow: 0 10px 0 #FFFFFF;
+  box-shadow: 0 10px 0 var(--colorW);
 }
 #toggle:after {
   content: "";
   position: absolute;
   width: 30px;
   height: 2px;
-  background: #FFFFFF;
+  background: var(--colorW);
   transition: 0.2s;
   transform: translateY(10px);
 }
 #toggle.active::before {
   transform: translateY(0px) rotate(45deg);
-  box-shadow: 0 0px 0 #FFFFFF;
+  box-shadow: 0 0px 0 var(--colorW);
 }
 #toggle.active::after {
   transform: translateY(0px) rotate(-45deg);
@@ -377,7 +351,7 @@ body {
   display: none;
   flex-direction: column;
   align-items: flex-start;
-  color: #FFFFFF;
+  color: var(--colorW);
   background-color: rgba(71, 98, 230, 0.7);
   -webkit-backdrop-filter: blur(4px);
           backdrop-filter: blur(4px);
@@ -436,7 +410,7 @@ body {
   align-items: center;
   border-radius: 50px;
   overflow: hidden;
-  background-color: #FFFFFF;
+  background-color: var(--colorW);
 }
 
 @media (max-width: 420px) {
@@ -455,7 +429,7 @@ body {
   }
 }
 .contenedorTitulo2 {
-  background-color: #4762e6;
+  background-color: var(--color3);
   width: 800px;
   height: 100px;
   display: flex;
@@ -476,7 +450,7 @@ body {
 }
 .contenedorInputs2 input:focus {
   outline: none;
-  border: 1px solid #4762e6;
+  border: 1px solid var(--color3);
   transition: border 1s ease-in-out;
 }
 
@@ -496,7 +470,7 @@ body {
 }
 .contenedorInputs3 input:focus {
   outline: none;
-  border: 1px solid #4762e6;
+  border: 1px solid var(--color3);
   transition: border 1s ease-in-out;
 }
 
@@ -567,9 +541,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #FFFFFF;
+  color: var(--colorW);
   border: 1px solid #4ebbf2;
-  background-color: #4762e6;
+  background-color: var(--color3);
   transition: background-color 1s ease-in-out, color 1s ease-in-out;
 }
 
@@ -580,7 +554,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   }
 }
 .butLogINV:hover {
-  background-color: #FFFFFF;
+  background-color: var(--colorW);
   color: #000000;
   cursor: pointer;
 }
@@ -591,7 +565,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 table {
-  border: 1px solid #ccc;
+  border: 1px solid var(--color4);
   border-collapse: collapse;
   margin: 0;
   padding: 0;
@@ -601,7 +575,7 @@ table {
 }
 
 table tr {
-  background-color: #FFFFFF;
+  background-color: var(--colorW);
   border: 1px solid var(--color4);
 }
 
@@ -625,7 +599,7 @@ table th {
   font-weight: 700;
   text-transform: uppercase;
   background-color: var(--color3);
-  color: #FFFFFF;
+  color: var(--colorW);
 }
 
 @media screen and (max-width: 821px) {
@@ -666,7 +640,7 @@ table th {
 
   table td:first-child {
     background-color: var(--color3);
-    color: #FFFFFF;
+    color: var(--colorW);
   }
 
   table td:last-child {
@@ -700,7 +674,6 @@ body:not(.nohover) tbody tr:hover {
     margin-right: 25px;
   }
 }
-/* [  ] */
 .rh-dropdown > .dropdown {
   vertical-align: middle;
 }
@@ -872,7 +845,7 @@ html[data-theme=sol] {
 
 @media (max-width: 420px) {
   html {
-    background: #FFFFFF;
+    background: var(--colorW);
   }
 }
 .byus {
