avance en filtros

--- a/styles/_enIndex.scss
+++ b/styles/_enIndex.scss
@@ -113,3 +113,382 @@
   color: var(--colorW);
   cursor: pointer;
 }
+
+.hugeContenedor {
+  width: 800px;
+  height: 800px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  align-items: center;
+  border-radius: 50px;
+  overflow: hidden;
+  background-color: var(--colorW);
+}
+
+@media (max-width: 420px) {
+  .hugeContenedor {
+    margin-top: 0;
+    height: auto;
+    width: 100vw;
+    border-radius: 0;
+  }
+}
+
+@media (min-width: 421px) and (max-width: 1025px) {
+  .hugeContenedor {
+    margin-top: 100px;
+    width: 700px;
+    height: 700px;
+  }
+}
+
+.contenedorTitulo2 {
+  background-color: var(--color3);
+  width: 800px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contenedorInputs2 {
+  margin-top: 25px;
+  width: 800px;
+  height: 400px;
+  padding-bottom: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+
+  input:focus {
+    outline: none;
+    border: 1px solid var(--color3);
+    transition: border 1s ease-in-out;
+  }
+}
+
+@media (max-width: 420px) {
+  .contenedorInputs2 {
+    width: 100vw;
+    height: auto;
+    padding-bottom: 0px;
+    margin-bottom: 25px;
+  }
+}
+
+.contenedorInputs3 {
+  width: 800px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+
+  input:focus {
+    outline: none;
+    border: 1px solid var(--color3);
+    transition: border 1s ease-in-out;
+  }
+}
+
+@media (max-width: 420px) {
+  .contenedorInputs3 {
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.spacer1 {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+@media (max-width: 420px) {
+  .spacer1 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+
+/*
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+*/
+
+#inputApellido {
+  background: url("../images/id-card-regular.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
+}
+
+#inputNombre {
+  background: url("../images/id-card-regular.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
+}
+
+#inputDate {
+  background: url("../images/calendar-days-regular.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
+}
+
+#inputDNI {
+  background: url("../images/id-card-regular.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
+}
+
+#inputPhone {
+  background: url("../images/phone-solid.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
+}
+
+.butLogINV {
+  width: 300px;
+  height: 50px;
+  margin-top: 50px;
+  border-radius: 12px;
+  margin-bottom: 20px;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--colorW);
+  border: 1px solid #4ebbf2;
+  background-color: var(--color3);
+  transition: background-color 1s ease-in-out,
+    color 1s ease-in-out;
+}
+
+@media (max-width: 420px) {
+  .butLogINV {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+
+.butLogINV:hover {
+  background-color: var(--colorW);
+  color: #000000;
+  cursor: pointer;
+}
+
+.subtLog2 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 16px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.main {
+  color: var(--colorW);
+}
+
+.browse {
+  width: 100px;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color3);
+  color: var(--colorW);
+
+  a:first-child {
+      margin-top: 100px;
+  }
+}
+
+@media (max-width: 420px) {
+  .browse {
+      display: none;
+  }
+}
+
+.content {
+  width: 100vw;
+  background-color: var(--color3);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  color: var(--colorB);
+}
+
+.userBar {
+  height: 100px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: var(--color3);
+}
+
+
+.userName {
+  margin-right: 20px;
+  font-family: 'Oswald', sans-serif;
+  font-size: 24px;
+  color: var(--colorW);
+}
+
+.userPic {
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  margin-right: 50px;
+  background-color: var(--colorW);
+}
+
+@media (max-width: 420px) {
+  .userPic {
+      margin-right: 20px;
+  }
+}
+
+.menuItem {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 3px;
+  min-width: 75px;
+  max-width: 150px;
+  min-height: 75px;
+  border-radius: 12px;
+  font-size: 24px;
+  color: var(--colorW);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--colorW);
+  transition: background-color 1s ease-in-out;
+
+  a {
+      color: var(--colorW);
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1367px) {
+  .menuItem {
+      margin-top: 10px;
+      margin-bottom: 10px;
+  }
+}
+
+.itemOnMobile {
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.menuItem:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+@media (max-width: 420px) {
+  .menuItem {
+      padding-top: 0px;
+      max-width: 375px;
+      padding-left: 25px;
+      padding-right: 25px;
+  }
+
+  .menuItem:hover {
+      max-width: 375px;
+  }
+}
+
+.realContent {
+  background-color: var(--colorW);
+  overflow: hidden;
+  border-radius: 50px 0 0 0;
+  height: calc(100vh - 100px);
+  width: calc(100vw - 100px);
+}
+
+@media (max-width: 420px) {
+  .realContent {
+      border-radius: 0px;
+      height: calc(100vh - 100px);
+      width: 100vw;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 820px) {
+  .realContent {
+      height: 100vh;
+  }
+}
+
+
+.indicadorPagina {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 48px;
+  margin: 25px;
+  margin-left: 50px;
+  font-weight: 700;
+}
+
+@media (max-width: 420px) {
+  .indicadorPagina {
+      font-size: 32px;
+      margin: 25px;
+  }
+}
+
+.arpaStats {
+  margin-left: 50px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+.statsText {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 32px;
+  width: 500px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+@media (max-width: 375px) {
+  .statsText {
+      font-size: 20px;
+  }
+}
+
+@media (min-width: 376px) and (max-width: 420px) {
+  .statsText {
+      font-size: 24px;
+  }
+}
+
+@media (min-width: 421px) and (max-width: 1023px) {
+  .statsText {
+      font-size: 42px;
+      width: 600px;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1367px) {
+  .statsText {
+      font-size: 24px;
+      width: 330px;
+  }
+}
+
+.statsNumbers {
+  font-weight: 700;
+}
