--- a/styles/style.css
+++ b/styles/style.css
@@ -109,6 +109,169 @@
   cursor: pointer;
 }
 
+.hugeContenedor {
+  width: 800px;
+  height: 800px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  align-items: center;
+  border-radius: 50px;
+  overflow: hidden;
+  background-color: var(--colorW);
+}
+
+@media (max-width: 420px) {
+  .hugeContenedor {
+    margin-top: 0;
+    height: auto;
+    width: 100vw;
+    border-radius: 0;
+  }
+}
+@media (min-width: 421px) and (max-width: 1025px) {
+  .hugeContenedor {
+    margin-top: 100px;
+    width: 700px;
+    height: 700px;
+  }
+}
+.contenedorTitulo2 {
+  background-color: var(--color3);
+  width: 800px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contenedorInputs2 {
+  margin-top: 25px;
+  width: 800px;
+  height: 400px;
+  padding-bottom: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+.contenedorInputs2 input:focus {
+  outline: none;
+  border: 1px solid var(--color3);
+  transition: border 1s ease-in-out;
+}
+
+@media (max-width: 420px) {
+  .contenedorInputs2 {
+    width: 100vw;
+    height: auto;
+    padding-bottom: 0px;
+    margin-bottom: 25px;
+  }
+}
+.contenedorInputs3 {
+  width: 800px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+}
+.contenedorInputs3 input:focus {
+  outline: none;
+  border: 1px solid var(--color3);
+  transition: border 1s ease-in-out;
+}
+
+@media (max-width: 420px) {
+  .contenedorInputs3 {
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.spacer1 {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+@media (max-width: 420px) {
+  .spacer1 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+/*
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+*/
+#inputApellido {
+  background: url("../images/id-card-regular.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
+}
+
+#inputNombre {
+  background: url("../images/id-card-regular.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
+}
+
+#inputDate {
+  background: url("../images/calendar-days-regular.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
+}
+
+#inputDNI {
+  background: url("../images/id-card-regular.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
+}
+
+#inputPhone {
+  background: url("../images/phone-solid.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
+}
+
+.butLogINV {
+  width: 300px;
+  height: 50px;
+  margin-top: 50px;
+  border-radius: 12px;
+  margin-bottom: 20px;
+  font-family: "Montserrat", sans-serif;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--colorW);
+  border: 1px solid #4ebbf2;
+  background-color: var(--color3);
+  transition: background-color 1s ease-in-out, color 1s ease-in-out;
+}
+
+@media (max-width: 420px) {
+  .butLogINV {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+.butLogINV:hover {
+  background-color: var(--colorW);
+  color: #000000;
+  cursor: pointer;
+}
+
+.subtLog2 {
+  font-family: "Oswald", sans-serif;
+  font-size: 16px;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -119,7 +282,7 @@ body {
 }
 
 .browse {
-  padding-left: 9px;
+  width: 100px;
   height: 100vh;
   position: absolute;
   left: 0;
@@ -197,6 +360,12 @@ body {
   color: var(--colorW);
 }
 
+@media (min-width: 1024px) and (max-width: 1367px) {
+  .menuItem {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
 .itemOnMobile {
   flex-direction: row;
   justify-content: flex-start;
@@ -221,8 +390,9 @@ body {
 }
 .realContent {
   background-color: var(--colorW);
+  overflow: hidden;
   border-radius: 50px 0 0 0;
-  min-height: calc(100vh - 100px);
+  height: calc(100vh - 100px);
   width: calc(100vw - 100px);
 }
 
@@ -401,169 +571,6 @@ body {
   padding-left: 25px;
 }
 
-.hugeContenedor {
-  width: 800px;
-  height: 800px;
-  display: flex;
-  flex-direction: column;
-  margin-top: 50px;
-  align-items: center;
-  border-radius: 50px;
-  overflow: hidden;
-  background-color: var(--colorW);
-}
-
-@media (max-width: 420px) {
-  .hugeContenedor {
-    margin-top: 0;
-    height: auto;
-    width: 100vw;
-    border-radius: 0;
-  }
-}
-@media (min-width: 421px) and (max-width: 1025px) {
-  .hugeContenedor {
-    margin-top: 100px;
-    width: 700px;
-    height: 700px;
-  }
-}
-.contenedorTitulo2 {
-  background-color: var(--color3);
-  width: 800px;
-  height: 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.contenedorInputs2 {
-  margin-top: 25px;
-  width: 800px;
-  height: 400px;
-  padding-bottom: 100px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-}
-.contenedorInputs2 input:focus {
-  outline: none;
-  border: 1px solid var(--color3);
-  transition: border 1s ease-in-out;
-}
-
-@media (max-width: 420px) {
-  .contenedorInputs2 {
-    width: 100vw;
-    height: auto;
-    padding-bottom: 0px;
-    margin-bottom: 25px;
-  }
-}
-.contenedorInputs3 {
-  width: 800px;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-}
-.contenedorInputs3 input:focus {
-  outline: none;
-  border: 1px solid var(--color3);
-  transition: border 1s ease-in-out;
-}
-
-@media (max-width: 420px) {
-  .contenedorInputs3 {
-    width: 100vw;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-.spacer1 {
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-@media (max-width: 420px) {
-  .spacer1 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-}
-/*
-input[type="date"]::-webkit-inner-spin-button,
-input[type="date"]::-webkit-calendar-picker-indicator {
-  display: none;
-  -webkit-appearance: none;
-}
-*/
-#inputApellido {
-  background: url("../images/id-card-regular.svg") no-repeat right;
-  background-position: 96% 50%;
-  background-size: 20px;
-}
-
-#inputNombre {
-  background: url("../images/id-card-regular.svg") no-repeat right;
-  background-position: 96% 50%;
-  background-size: 20px;
-}
-
-#inputDate {
-  background: url("../images/calendar-days-regular.svg") no-repeat right;
-  background-position: 96% 50%;
-  background-size: 20px;
-}
-
-#inputDNI {
-  background: url("../images/id-card-regular.svg") no-repeat right;
-  background-position: 96% 50%;
-  background-size: 20px;
-}
-
-#inputPhone {
-  background: url("../images/phone-solid.svg") no-repeat right;
-  background-position: 96% 50%;
-  background-size: 20px;
-}
-
-.butLogINV {
-  width: 300px;
-  height: 50px;
-  margin-top: 50px;
-  border-radius: 12px;
-  margin-bottom: 20px;
-  font-family: "Montserrat", sans-serif;
-  text-decoration: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: var(--colorW);
-  border: 1px solid #4ebbf2;
-  background-color: var(--color3);
-  transition: background-color 1s ease-in-out, color 1s ease-in-out;
-}
-
-@media (max-width: 420px) {
-  .butLogINV {
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-}
-.butLogINV:hover {
-  background-color: var(--colorW);
-  color: #000000;
-  cursor: pointer;
-}
-
-.subtLog2 {
-  font-family: "Oswald", sans-serif;
-  font-size: 16px;
-}
-
 table {
   border: 1px solid var(--color4);
   border-collapse: collapse;
@@ -602,7 +609,7 @@ table th {
   color: var(--colorW);
 }
 
-@media screen and (max-width: 821px) {
+@media (max-width: 821px) {
   table {
     border: 0;
   }
@@ -655,17 +662,100 @@ body:not(.nohover) tbody tr:hover {
 .contenedorTabla {
   margin-left: 50px;
   margin-right: 50px;
+  overflow-y: scroll;
+  height: 604px;
 }
 
 @media (max-width: 420px) {
   .contenedorTabla {
     margin-left: 25px;
     margin-right: 25px;
+    overflow-y: auto;
   }
 }
+@media (min-width: 1024px) and (max-width: 1367px) {
+  .contenedorTabla {
+    height: 445px;
+  }
+}
+.miniContainer {
+  display: flex;
+  flex-direction: column;
+}
+.miniContainer label {
+  font-family: "Oswald", sans-serif;
+  font-size: 18px;
+}
+.miniContainer .dropdown {
+  vertical-align: middle;
+}
+.miniContainer .dropdown {
+  display: inline-block;
+  overflow: hidden;
+  width: 230px;
+  height: 40px;
+  background: var(--color5);
+  border: 0;
+  margin-right: 30px;
+  font-size: 16px;
+}
+
+@media (max-width: 420px) {
+  .miniContainer .dropdown {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 341px;
+  }
+}
+@media (max-width: 375px) {
+  .miniContainer .dropdown {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 323px;
+  }
+}
+.miniContainer input {
+  display: inline-block;
+  overflow: hidden;
+  width: 300px;
+  height: 38px;
+  background: var(--color5);
+  border: 0;
+  margin-right: 30px;
+  font-size: 16px;
+}
+
+@media (max-width: 420px) {
+  .miniContainer input {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 337px;
+  }
+}
+@media (max-width: 375px) {
+  .miniContainer input {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 319px;
+  }
+}
+.dropdown option {
+  cursor: pointer;
+  font-size: 16px;
+}
+
+/* [ std-select ] */
+.std-select {
+  width: 230px;
+  height: 40px;
+}
+
 .contenedorFiltros {
   margin: 25px;
   margin-left: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
 }
 
 @media (max-width: 420px) {
@@ -674,71 +764,15 @@ body:not(.nohover) tbody tr:hover {
     margin-right: 25px;
   }
 }
-.rh-dropdown > .dropdown {
-  vertical-align: middle;
-}
-.rh-dropdown .dropdown {
-  display: inline-block;
-  overflow: hidden;
-  width: 200px;
+.botonFiltrar {
+  width: 230px;
   height: 40px;
-  background: #f5f5f5;
-  margin-top: 0px;
+  background: var(--color3);
+  color: var(--colorW);
   border: 0;
-}
-.rh-dropdown .dropdown + .dropdown {
-  border-left: 1px dashed #ddd;
-}
-.rh-dropdown .dropdown:before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  width: 0;
-  height: 0;
-  pointer-events: none;
-}
-.rh-dropdown .dropdown:before {
-  border-top-style: solid;
-  border-bottom: none;
-  margin-top: -2px;
-}
-.rh-dropdown .dropdown .dropdown-select {
-  position: relative;
-  width: 100%;
-  margin: 0;
-  padding: 6px 8px 6px 10px;
-  height: 40px;
-  font-size: 13px;
-  border: 0;
-  -webkit-appearance: none;
-}
-@-moz-document url-prefix() {
-  .rh-dropdown .dropdown .dropdown-select {
-    padding-left: 6px;
-  }
-}
-.rh-dropdown .dropdown .dropdown-select > option {
-  margin: 3px;
-  padding: 6px 8px;
-  text-shadow: none;
+  margin-right: 30px;
+  font-size: 16px;
   cursor: pointer;
-}
-
-.ie9 .dropdown {
-  z-index: 1;
-}
-.ie9 .dropdown-select {
-  z-index: -1;
-}
-.ie9 .dropdown-select:focus {
-  z-index: 3;
-}
-
-/* [ std-select ] */
-.std-select {
-  width: 200px;
-  height: 40px;
 }
 
 #toastOK {
@@ -831,6 +865,7 @@ html {
   --color2: #4dbcf4;
   --color3: #4762e6;
   --color4: #d4d4d4;
+  --color5: rgb(230, 230, 255);
   display: flex;
   align-items: center;
   justify-content: center;
