--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,5 @@
 @use "enIndex";
-@use "enLogged";
 @use "barra";
-@use "enRegi";
 @use "tablas";
 @use "selectores";
 @use "toasts";
@@ -15,6 +13,8 @@ html {
   --color2: #4dbcf4;
   --color3: #4762e6;
   --color4: #d4d4d4;
+  --color5: rgb(230, 230, 255);
+
 
   display: flex;
   align-items: center;
