little fixes de filtros

--- a/styles/_selectores.scss
+++ b/styles/_selectores.scss
@@ -94,7 +94,7 @@
 }
 
 .botonFiltrar{
-  width: 230px;
+  width: 115px;
     height: 40px;
     background: var(--color3);
     color: var(--colorW);
@@ -102,4 +102,19 @@
     margin-right: 30px;
     font-size: 16px;
     cursor: pointer;
+}
+
+@media (min-width: 421px) and (max-width: 1024px) {
+  .botonFiltrar{
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+
+
+@media (max-width: 420px) {
+  .botonFiltrar{
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
