fixed browsermobile margins

--- a/styles/style.css
+++ b/styles/style.css
@@ -570,13 +570,19 @@ body {
     min-height: 60px;
   }
 }
-@media (max-width: 420px) {
+@media (max-width: 768px) {
   #browseMobile {
     display: flex;
   }
 
   .fa-solid {
     min-width: 30px;
+  }
+}
+@media (max-width: 420px) {
+  .menuItem {
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 }
 .closed {
