--- a/styles/_enIndex.scss
+++ b/styles/_enIndex.scss
@@ -511,6 +511,19 @@ body {
   font-size: 36px;
 }
 
+.giraRuedaAd{
+  animation:spin 2s ease-in-out;
+}
+
+@keyframes spin { 100% { -webkit-transform: rotate(540deg); transform:rotate(540deg); } }
+
+.giraRuedaAt{
+  animation:spin2 2s ease-in-out;
+}
+
+@keyframes spin2 { 100% { -webkit-transform: rotate(-540deg); transform:rotate(-540deg); } }
+
+
 .closedFiltering {
   display: flex;
 }
@@ -524,3 +537,4 @@ body {
 .openedFiltering {
   display: flex;
 }
+
