--- a/styles/_selectores.scss
+++ b/styles/_selectores.scss
@@ -23,6 +23,14 @@
   }
 }
 
+@media (min-width: 421px) and (max-width: 767px) {
+  .miniContainer .dropdown {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 430px;
+  }
+}
+
 @media (max-width: 420px) {
   .miniContainer .dropdown {
     margin-top: 10px;
@@ -48,6 +56,14 @@
   border: 0;
   margin-right: 30px;
   font-size: 16px;
+}
+
+@media (min-width: 421px) and (max-width: 767px) {
+  .miniContainer input {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 430px;
+  }
 }
 
 @media (max-width: 420px) {
@@ -93,19 +109,19 @@
   }
 }
 
-.botonFiltrar{
+.botonFiltrar {
   width: 115px;
-    height: 40px;
-    background: var(--color3);
-    color: var(--colorW);
-    border: 0;
-    margin-right: 30px;
-    font-size: 16px;
-    cursor: pointer;
+  height: 40px;
+  background: var(--color3);
+  color: var(--colorW);
+  border: 0;
+  margin-right: 30px;
+  font-size: 16px;
+  cursor: pointer;
 }
 
 @media (min-width: 421px) and (max-width: 1024px) {
-  .botonFiltrar{
+  .botonFiltrar {
     margin-top: 10px;
     margin-bottom: 10px;
   }
@@ -113,7 +129,7 @@
 
 
 @media (max-width: 420px) {
-  .botonFiltrar{
+  .botonFiltrar {
     margin-top: 10px;
     margin-bottom: 10px;
   }
