--- a/styles/style.css
+++ b/styles/style.css
@@ -847,25 +847,32 @@ body:not(.nohover) tbody tr:hover {
     margin-right: 25px;
   }
 }
-.botonFiltrar {
-  width: 115px;
+.botonEnSelect {
+  min-width: 115px;
   height: 40px;
   background: var(--color3);
   color: var(--colorW);
   border: 0;
   margin-right: 30px;
-  font-size: 16px;
+  font-family: "Oswald", sans-serif;
+  font-size: 18px;
   cursor: pointer;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#botonAddRefu {
+  background: var(--color6);
 }
 
 @media (min-width: 421px) and (max-width: 1024px) {
-  .botonFiltrar {
+  .botonEnSelect {
     margin-top: 10px;
     margin-bottom: 10px;
   }
 }
 @media (max-width: 420px) {
-  .botonFiltrar {
+  .botonEnSelect {
     margin-top: 10px;
     margin-bottom: 10px;
   }
@@ -961,6 +968,7 @@ html {
   --color3: #4762e6;
   --color4: #d4d4d4;
   --color5: rgb(230, 230, 255);
+  --color6: #007900;
   display: flex;
   align-items: center;
   justify-content: center;
