fixes en mascotas

--- a/styles/_selectores.scss
+++ b/styles/_selectores.scss
@@ -100,12 +100,14 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
+  gap: 12px;
 }
 
 @media (max-width: 767px) {
   #contenedorFiltros {
     margin-left: 25px;
     margin-right: 25px;
+    gap: 0px;
   }
 }
 
@@ -123,7 +125,7 @@
   padding-right: 20px;
 }
 
-#botonAddRefu {
+#botonAddRefu, #botonAddPerso, #botonAddMasco {
   background: var(--color6);
   margin-left: auto;
   margin-right: 25px;
@@ -135,7 +137,7 @@
     margin-bottom: 10px;
   }
 
-  #botonAddRefu {
+  #botonAddRefu, #botonAddPerso, #botonAddMasco {
     margin-right: 0px;
   }
 }
@@ -146,7 +148,7 @@
     margin-bottom: 10px;
   }
 
-  #botonAddRefu {
+  #botonAddRefu, #botonAddPerso, #botonAddMasco {
     margin-right: 0px;
   }
 }
